<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myProduct"
            type="com.example.growgreen.MyProducts" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardElevation="4dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B2F6B5"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="75dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@{myProduct.img}"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/plant_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/barbary_fig" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{myProduct.productName}"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@{Integer.toString(myProduct.price1)}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageView
                android:id="@+id/delete_item"
                android:layout_width="33dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_trash__1_" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/plus"
                android:focusable="true"
                android:src="@drawable/outline_add_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_item" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="26dp"
                android:layout_height="33dp"
                android:text="@{Integer.toString(myProduct.quantity)}"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addButton" />

            <ImageButton
                android:id="@+id/substract_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/minus"
                android:focusable="true"
                android:src="@drawable/outline_remove_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView7" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>




</layout>